unpackaged/main/default/objects/ACG_Membership_Options_Offerings__mdt/ACG_Membership_Options_Offerings__mdt.object-meta.xml
<CustomObject>
    <description>Membership offerings for business unit</description>
    <label>ACG Membership Options Offerings</label>
    <pluralLabel>ACG Membership Options Offerings</pluralLabel>
</CustomObject>