unpackaged/main/default/objects/ACG_Membership_Options_Offerings__mdt/fields/ACG_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ACG_Business_Unit__c</fullName>
    <description>Business unit of the option</description>
    <label>Business Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACG Core - Club 014</fullName>
                <default>true</default>
                <label>ACG Core - Club 014</label>
            </value>
            <value>
                <fullName>ACG Core - Others</fullName>
            </value>
            <value>
                <fullName>Colorado</fullName>
            </value>
            <value>
                <fullName>Carolinas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>