unpackaged/main/default/objects/ACG_Membership_Options_Offerings__mdt/fields/ACG_Category__c.field-meta.xml
<CustomField>
    <fullName>ACG_Category__c</fullName>
    <description>Category of option</description>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>membershipSelection</fullName>
            </value>
            <value>
                <fullName>RVIncluded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>