unpackaged/main/default/objects/ACG_Membership_Options_Offerings__mdt/fields/ACG_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>ACG_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this config active ?</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>