unpackaged/main/default/objects/ACG_Membership_Options_Offerings__mdt/fields/ACG_Offering__c.field-meta.xml
<CustomField>
    <fullName>ACG_Offering__c</fullName>
    <description>Name of the offering</description>
    <label>Offering</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>