unpackaged/main/default/objects/ACG_Membership_Options_Offerings__mdt/fields/Child_Offerings__c.field-meta.xml
<CustomField>
    <fullName>Child_Offerings__c</fullName>
    <description>offerings which would be available with current offerings</description>
    <inlineHelpText>offerings which would be available with current offering</inlineHelpText>
    <label>Child Offerings</label>
    <length>100</length>
    <type>Text</type>
</CustomField>