unpackaged/main/default/objects/ACG_Membership_Options_Offerings__mdt/fields/Price_Compare_Tool_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Compare_Tool_Name__c</fullName>
    <description>name to be used in price compare tool</description>
    <label>Price Compare Tool Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>